# Simple-Raytracer

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  imgui.ini  meson.build  xmake.lua
include/: color.hpp  helper.hpp  interface.hpp  material.hpp  parser.hpp  ray_cast.hpp  shape.hpp  shapes.hpp  tracer.hpp
lib/: tiny-gizmo.cpp
src/: interface.cpp  main.cpp  parser.cpp  render.cl  shape.cpp  tracer.cpp
tiny-gizmo/: tiny-gizmo.hpp
